Some settings.py configuration

--- a/astra-backend/astraweb/.ebextensions/djangoapp.config
+++ b/astra-backend/astraweb/.ebextensions/djangoapp.config
@@ -1,3 +1,7 @@
 option_settings:
-  aws:elasticbeanstalk:container:python:
-    WSGIPath: astraweb/wsgi.py
+  "aws:elasticbeanstalk:application:environment":
+    DJANGO_SETTINGS_MODULE: "astraweb.settings"
+    PYTHONPATH: "$PYTHONPATH"
+  "aws:elasticbeanstalk:container:python":
+    WSGIPath: "astraweb/wsgi.py"
+    StaticFiles: "/static/=www/static/"
