--- a/astra-backend/astraweb/requirements.txt
+++ b/astra-backend/astraweb/requirements.txt
@@ -1,3 +1,4 @@
+amqp==2.2.2
 Babel==2.5.3
 certifi==2018.1.18
 chardet==3.0.4
@@ -5,11 +6,16 @@ Django==2.0.3
 django-phonenumber-field==2.0.0
 djangorestframework==3.7.7
 idna==2.6
+Mako==1.0.7
+MarkupSafe==1.0
+passlib==1.7.1
 phonenumberslite==8.9.1
 Pillow==5.0.0
+psycopg2==2.7.4
 pubnub==4.0.13
 pycryptodomex==3.5.1
 pytz==2018.3
 requests==2.18.4
 six==1.11.0
 urllib3==1.22
+vine==1.1.4
