--- a/astra-backend/astraweb/.ebextensions/python.config
+++ b/astra-backend/astraweb/.ebextensions/python.config
@@ -18,7 +18,7 @@ container_commands:
     command: "python manage.py createsu"
     leader_only: true
   05_create_proj:
-    command: "python astraweb/management/commands/project_creation.py"
+    command: "python manage.py createproj"
     leader_only: true
 
 packages:
