--- a/astra-backend/astraweb/.ebextensions/python.config
+++ b/astra-backend/astraweb/.ebextensions/python.config
@@ -36,8 +36,8 @@ container_commands:
     command: "source /home/ec2-user/.bash_aliases"
   02_install_requirements:
     command: "source /opt/python/run/venv/bin/activate && pip install -r requirements.txt"
-  #03_activate:
-    #command: "source /opt/python/run/venv/bin/activate && /tmp/psycopg2_install_script.sh"
+  03_activate:
+    command: "source /opt/python/run/venv/bin/activate && /tmp/psycopg2_install_script.sh"
   04_migrate:
     command: "source /opt/python/run/venv/bin/activate && python manage.py migrate"
     leader_only: true
