--- a/astra-backend/astraweb/requirements.txt
+++ b/astra-backend/astraweb/requirements.txt
@@ -2,14 +2,17 @@ amqp==2.2.2
 astroid==1.6.2
 awsebcli==3.12.4
 Babel==2.5.3
+billiard==3.5.0.3
 blessed==1.14.2
 boto3==1.7.4
 botocore==1.10.4
+celery==4.1.0
 cement==2.8.2
 certifi==2018.1.18
 chardet==3.0.4
 colorama==0.3.7
 Django==2.0.3
+django-celery-beat==1.1.1
 django-phonenumber-field==2.0.0
 django-storages==1.6.6
 djangorestframework==3.7.7
@@ -19,6 +22,7 @@ docutils==0.14
 idna==2.6
 isort==4.3.4
 jmespath==0.9.3
+kombu==4.1.0
 lazy-object-proxy==1.3.1
 Mako==1.0.7
 MarkupSafe==1.0
@@ -32,7 +36,9 @@ psycopg2==2.7.4
 pubnub==4.0.13
 pycryptodomex==3.5.1
 pylint==1.8.3
+python-crontab==2.2.8
 python-dateutil==2.6.1
+python-magic==0.4.15
 pytz==2018.3
 PyYAML==3.12
 requests==2.18.4
