--- a/astra-frontend/package.json
+++ b/astra-frontend/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^0.32.1",
     "react-center": "^1.1.1",
     "react-chartjs": "^1.2.0",
+    "react-cookie": "^2.1.4",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
